# dogecoin

./: .gitignore  Dockerfile  commands  compile_commands.json  configure.ac
src/: Makefile.am  Makefile.qt.include
src/mcl/: Makefile.am  configure.ac
src/script/: groth16.cpp  groth16.h  interpreter.cpp
